# umwelt

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
tests/: test_abc.py  test_custom_decoder.py  test_future_annotations.py  test_prefix_and_nesting.py  test_readme.py  test_readme_nested.py  test_readme_simple.py  test_scalars.py  test_structures.py
umwelt/: __init__.py  errors.py  interface.py
umwelt/decoders/: jsonlike.py
