[tool.poetry]
name = "umwelt"
version = "2019.08.2"
description = "Configure your program via environment variables, validated by pydantic."
authors = ["Thibaut Le Page <thilp@thilp.net>"]
license = "MIT"
repository = "https://github.com/thilp/umwelt"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pydantic = ">=0.17,<1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
ipython = "^7.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
